--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -119,7 +119,7 @@
         <!-- Logo -->
         <a href="{% url 'frontend:home' %}" class="flex items-center gap-3">
           <div class="w-10 h-10 rounded-xl glass grid place-items-center">
-            <img src="{% static 'frontend/images/Owlsight-logo.png' %}" alt="Owlsight" class="w-7 h-7 object-contain"
+            <img src="{% static 'frontend/images/logo.png' %}" alt="Owlsight" class="w-7 h-7 object-contain"
                  onerror="this.style.display='none'; this.parentElement.innerHTML='<span style=&quot;color:rgba(255,255,255,.9);font-weight:900;&quot;>O</span>';">
 
           </div>
